# GitHub_SelfBot

./: .gitignore  README.md
discord-selfbot/: .haskell-ghc-mod.json  discord-selfbot.cabal  stack.yaml
discord-selfbot/src/: Befunge.hs  BrainFuck.hs  Hseval.hs  Main.hs  commands.hs  pyeval.py  shared.hs
py_vers/: main.py
py_vers/cogs/: stuff.py
