name:                discord-selfbot
version:             0.1.0.0
synopsis:            My discord selfbot
-- description:
homepage:            https://github.com/nitros12/GitHub_SelfBot
-- license:             z e r o l i c e n s e
-- license-file:        Ye Whats this license you're talking about
author:              Nitros
maintainer:          ben@bensimms.moe
-- copyright:           my asss
category:            Bots
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

extra-prog-path: C:\Program Files\Haskell Platform\8.0.2\msys\usr\bin
extra-lib-dirs: C:\Program Files\Haskell Platform\8.0.2\mingw\lib
extra-include-dirs: C:\Program Files\Haskell Platform\8.0.2\mingw\include

executable discord-selfbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       ,discord-hs==0.2.1
                       ,text
                       ,pipes
                       ,plugins==1.5.6.0
                       ,process==1.4.3.0
